k8s/psycho-api.dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psycho-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psycho-api
  template:
    metadata:
      labels:
        app: psycho-api
    spec:
      containers:
        - name: psycho-api
          image: denchiklut/psycho-api
          resources:
            limits:
              cpu: '200m'
              memory: '256Mi'
            requests:
              cpu: '100m'
              memory: '128Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: psycho-api-srv
spec:
  type: ClusterIP
  selector:
    app: psycho-api
  ports:
    - port: 8080
      targetPort: 8080
