k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
      - host: api.psychoschool.ru
        http:
          paths:
            - path: /api/v1/?(.*)
              pathType: Prefix
              backend:
                service:
                  name: psycho-api-srv
                  port:
                    number: 8080
